--- a/Scruffy.csproj
+++ b/Scruffy.csproj
@@ -11,4 +11,8 @@
     <PackageReference Include="Discord.Net" Version="3.17.2" />
     <PackageReference Include="Microsoft.Extensions.Hosting" Version="9.0.4" />
   </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Commands\Slash\" />
+  </ItemGroup>
 </Project>
