--- a/src/Scruffy/Scruffy.csproj
+++ b/src/Scruffy/Scruffy.csproj
@@ -9,10 +9,19 @@
 
   <ItemGroup>
     <PackageReference Include="Discord.Net" Version="3.17.2" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="9.0.4">
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+      <PrivateAssets>all</PrivateAssets>
+    </PackageReference>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="9.0.4" />
     <PackageReference Include="Microsoft.Extensions.Hosting" Version="9.0.4" />
   </ItemGroup>
 
   <ItemGroup>
     <Folder Include="Commands\Slash\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Scruffy.Data\Scruffy.Data.csproj" />
   </ItemGroup>
 </Project>
