--- a/.github/workflows/deploy-scruffy.yml
+++ b/.github/workflows/deploy-scruffy.yml
@@ -14,6 +14,12 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v2
 
+      # Step 2: Setup .NET SDK
+      - name: Setup .NET 9
+        uses: actions/setup-dotnet@v4
+        with:
+          dotnet-version: 9.0.4
+
       # Step 3: Restore dependencies
       - name: Restore dependencies
         run: dotnet restore Scruffy.sln
