--- a/.github/workflows/deploy-scruffy.yml
+++ b/.github/workflows/deploy-scruffy.yml
@@ -34,25 +34,25 @@ jobs:
           dotnet publish src/Scruffy/Scruffy.csproj --configuration Release --runtime linux-x64 --output ./publish
 
       # Step 6: Stop Scruffy Service
-      #- name: Stop Service
-      #  run: |
-      #    systemctl stop Scruffy.service
+      - name: Stop Service
+        run: |
+          systemctl stop Scruffy.service
 
       # Step 7: Backup the existing service
-      #- name: Backup existing service
-      #  run: |
-      #    TIMESTAMP=$(date +"%Y%m%d-%H%M%S")
-      #    BACKUP_DIR="/srv/Scruffy-backups"
-      #    mkdir -p "$BACKUP_DIR"
-      #    tar czf "$BACKUP_DIR/ReclinerBot-$TIMESTAMP.tar.gz" -C /srv Scruffy
+      - name: Backup existing service
+        run: |
+          TIMESTAMP=$(date +"%Y%m%d-%H%M%S")
+          BACKUP_DIR="/srv/Scruffy-backups"
+          mkdir -p "$BACKUP_DIR"
+          tar czf "$BACKUP_DIR/ReclinerBot-$TIMESTAMP.tar.gz" -C /srv Scruffy
 
       # Step 8: Start ReclinerBot Service
-      #- name: Start Service
-      #  run: |
-      #    systemctl start Scruffy.service
+      - name: Start Service
+        run: |
+          systemctl start Scruffy.service
 
       # Step 9: Copy the published files to /home/test/service on the self-hosted runner
-      #- name: Copy to /srv/Scruffy
-      #  run: |
-      #    sudo mkdir -p /srv/Scruffy
-      #    sudo cp -r ./publish/* /srv/Scruffy
+      - name: Copy to /srv/Scruffy
+        run: |
+          sudo mkdir -p /srv/Scruffy
+          sudo cp -r ./publish/* /srv/Scruffy
