--- a/.github/workflows/deploy-scruffy.yml
+++ b/.github/workflows/deploy-scruffy.yml
@@ -7,8 +7,7 @@ on:
 
 jobs:
   build-and-publish:
-    #runs-on: [self-hosted]
-    runs-on: ubuntu-latest
+    runs-on: [self-hosted]
     steps:
       # Step 1: Checkout the repository
       - name: Checkout code
