--- a/.github/workflows/deploy-scruffy.yml
+++ b/.github/workflows/deploy-scruffy.yml
@@ -29,20 +29,20 @@ jobs:
       # Step 5: Stop Scruffy Service
       - name: Stop Service
         run: |
-          systemctl stop Scruffy.service
+          sudo systemctl stop Scruffy.service
 
       # Step 6: Backup the existing service
       - name: Backup existing service
         run: |
           TIMESTAMP=$(date +"%Y%m%d-%H%M%S")
           BACKUP_DIR="/srv/Scruffy-backups"
-          mkdir -p "$BACKUP_DIR"
+          sudo mkdir -p "$BACKUP_DIR"
           tar czf "$BACKUP_DIR/ReclinerBot-$TIMESTAMP.tar.gz" -C /srv Scruffy
 
       # Step 7: Start ReclinerBot Service
       - name: Start Service
         run: |
-          systemctl start Scruffy.service
+          sudo systemctl start Scruffy.service
 
       # Step 8: Copy the published files to /home/test/service on the self-hosted runner
       - name: Copy to /srv/Scruffy
