--- a/.github/workflows/deploy-scruffy.yml
+++ b/.github/workflows/deploy-scruffy.yml
@@ -36,13 +36,13 @@ jobs:
         run: |
           TIMESTAMP=$(date +"%Y%m%d-%H%M%S")
           BACKUP_DIR="/srv/Scruffy-backups"
-          sudo mkdir -p "$BACKUP_DIR"
+          mkdir -p "$BACKUP_DIR"
           tar czf "$BACKUP_DIR/ReclinerBot-$TIMESTAMP.tar.gz" -C /srv Scruffy
 
       # Step 7: Start ReclinerBot Service
       - name: Start Service
         run: |
-          sudo systemctl start Scruffy.service
+          systemctl start Scruffy.service
 
       # Step 8: Copy the published files to /home/test/service on the self-hosted runner
       - name: Copy to /srv/Scruffy
