--- a/.github/workflows/deploy-scruffy.yml
+++ b/.github/workflows/deploy-scruffy.yml
@@ -18,7 +18,7 @@ jobs:
         run: dotnet restore Scruffy.sln
 
       # Step 3: Build the project
-      - name: Build CouchBot.Services.Discord.ReclinerBot
+      - name: Build Scruffy
         run: dotnet build src/Scruffy/Scruffy.csproj --configuration Release
 
       # Step 4: Publish the project for Linux
@@ -37,15 +37,15 @@ jobs:
           TIMESTAMP=$(date +"%Y%m%d-%H%M%S")
           BACKUP_DIR="/srv/Scruffy-backups"
           mkdir -p "$BACKUP_DIR"
-          tar czf "$BACKUP_DIR/ReclinerBot-$TIMESTAMP.tar.gz" -C /srv Scruffy
-
-      # Step 7: Start ReclinerBot Service
-      - name: Start Service
-        run: |
-          systemctl start Scruffy.service
+          tar czf "$BACKUP_DIR/Scruffy-$TIMESTAMP.tar.gz" -C /srv Scruffy
 
       # Step 8: Copy the published files to /home/test/service on the self-hosted runner
       - name: Copy to /srv/Scruffy
         run: |
           sudo mkdir -p /srv/Scruffy
           sudo cp -r ./publish/* /srv/Scruffy
+
+      # Step 7: Start Scruffy Service
+      - name: Start Service
+        run: |
+          systemctl start Scruffy.service
