--- a/src/Scruffy/Scruffy.csproj
+++ b/src/Scruffy/Scruffy.csproj
@@ -19,4 +19,8 @@
   <ItemGroup>
     <ProjectReference Include="..\Scruffy.Data\Scruffy.Data.csproj" />
   </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Commands\User\" />
+  </ItemGroup>
 </Project>
