--- a/src/Scruffy/Scruffy.csproj
+++ b/src/Scruffy/Scruffy.csproj
@@ -21,6 +21,6 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Commands\User\" />
+    <Folder Include="Commands\Message\" />
   </ItemGroup>
 </Project>
